# api_ie_representative

./: .dockerignore  .gitattributes  .gitignore  DEPLOY.md  Dockerfile  GO-LIVE.md  README.md  deploy-hf.sh  pyproject.toml  run.sh
.github/workflows/: ci.yml  refresh-space.yml
data/: overrides.yaml
src/irl_reps/: __init__.py  config.py  logging.py  schemas.py  service.py
src/irl_reps/api/: __init__.py  app.py  errors.py  routes.py
src/irl_reps/etl/: __init__.py  boundaries.py  build.py  cli.py  oireachtas.py  overrides.py
src/irl_reps/repository/: __init__.py  store.py
src/irl_reps/spatial/: __init__.py  index.py  loader.py
src/irl_reps/web/: index.html
tests/: conftest.py  test_api.py  test_data_integrity.py  test_etl.py  test_schemas.py  test_spatial.py
