[project]
name = "irl-reps"
version = "0.2.0"
description = "Irish TD lookup API: coordinate -> Dail constituency + TDs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "geopandas>=1.0",
    "shapely>=2.0",
    "pyarrow>=16",
    "httpx>=0.27",
    "pyyaml>=6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
refresh-reps = "irl_reps.etl.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/irl_reps"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Network-dependent checks are opt-in: run them in CI with `pytest -m integration`.
addopts = "-m 'not integration'"
markers = [
    "integration: hits the live Oireachtas API (network required)",
]
